Fixed layout issues in passenger details' verification page

--- a/public/css/showPassengerDetailsStyle.css
+++ b/public/css/showPassengerDetailsStyle.css
@@ -81,7 +81,8 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    height: 15%;
+    height: 40%;
+    overflow-y: auto;
 }
 
 .passengerInfo {
@@ -113,6 +114,7 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 2.5rem;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
 
